--- a/index.html
+++ b/index.html
@@ -1097,6 +1097,12 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/custom.ts"></script>
 
+    <script src="assets/js/core/aosInit.js"></script>
+    <script src="assets/js/core/index.js"></script>
+    <script src="assets/js/core/jarallaxInit.js"></script>
+    <script src="assets/js/core/mobileMenu.js"></script>
+    <script src="assets/js/core/owlCarousels.js"></script>
+
 </body>
 
 </html>
