--- a/event.html
+++ b/event.html
@@ -559,6 +559,7 @@
     <!-- Footer End -->
 
     <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/bootstrap-datepicker.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
@@ -570,4 +571,10 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/custom.ts"></script>
 
+    <script src="assets/js/core/aosInit.js"></script>
+    <script src="assets/js/core/index.js"></script>
+    <script src="assets/js/core/jarallaxInit.js"></script>
+    <script src="assets/js/core/mobileMenu.js"></script>
+    <script src="assets/js/core/owlCarousels.js"></script>
 </body>
+</html>
