--- a/index.html
+++ b/index.html
@@ -519,36 +519,108 @@
             </div>
         </div>
     </div>
+    <!-- Example Modal for Janet -->
 
-    <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
+    <div class="modal fade" id="story2" tabindex="-1" aria-labelledby="story2Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story2Label">Janet Kandulu's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Janet Kandulu, a dedicated student from Malawi, pursued her BSc in Nutrition and Dietetics at Chandigarh University. Her journey is a testament to the power of education and the support of Mtendere Education Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards success and fulfillment. Her story serves as a reminder of the importance of education and the potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity, and has shown them that education is not just about achieving academic success, but also about transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!-- SwiperJS Script -->
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <!-- Example Modal for Trust -->
+    <div class="modal fade" id="story3" tabindex="-1" aria-labelledby="story3Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story3Label">Trust Chikondi Mangani's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Trust Chikondi Mangani, a bright student from Malawi, pursued his BSc in Cybersecurity at Chandigarh University. His journey is a testament to the power of education and the support of Mtendere Education Consult.
+                    <p>He has been working with Mtendere Education Consult for over a decade, guiding students towards success and fulfillment. His story serves as a reminder of the importance of education and the potential it can bring.</p>
+                    <p>He has worked with students from various backgrounds, including those who have faced adversity, and has shown them that education is not just about achieving academic success, but also about transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!-- AOS Script -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Example Modal for Edna -->
+    <div class="modal fade" id="story4" tabindex="-1" aria-labelledby="story4Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story4Label">Edna Karonga's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Edna Karonga, a dedicated student from Malawi, pursued her MBA at Chandigarh University. Her journey is a testament to the power of education and the support of Mtendere Education Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards success and fulfillment. Her story serves as a reminder of the importance of education and the potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity, and has shown them that education is not just about achieving academic success, but also about transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <script>
-        AOS.init();
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1,
-            spaceBetween: 30,
-            loop: true,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            autoplay: {
-                delay: 3500,
-                disableOnInteraction: false,
-            },
-            breakpoints: {
-                640: { slidesPerView: 1 },
-                768: { slidesPerView: 2 },
-                1024: { slidesPerView: 3 }
-            }
-        });
-    </script>
+    <!-- Example Modal for Ian -->
+    <div class="modal fade" id="story5" tabindex="-1" aria-labelledby="story5Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story5Label">Ian Ndola's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Ian Ndola, a bright student from Malawi, pursued his MBA at the University of Alabama. His journey is a testament to the power of education and the support of Mtendere Education Consult.
+                    <p>He has been working with Mtendere Education Consult for over a decade, guiding students towards success and fulfillment. His story serves as a reminder of the importance of education and the potential it can bring.</p>
+                    <p>He has worked with students from various backgrounds, including those who have faced adversity, and has shown them that education is not just about achieving academic success, but also about transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Example Modal for Mirabel -->
+    <div class="modal fade" id="story6" tabindex="-1" aria-labelledby="story6Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story6Label">Mirabel Lopote's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Mirabel Lopote, a dedicated student from Malawi, pursued her Masters in Fashion Design at PCTE. Her journey is a testament to the power of education and the support of Mtendere Education Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards success and fulfillment. Her story serves as a reminder of the importance of education and the potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity, and has shown them that education is not just about achieving academic success, but also about transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Example Modal for Lexina -->
+    <div class="modal fade" id="story7" tabindex="-1" aria-labelledby="story7Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story7Label">Lexina Kumwenda's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lexina Kumwenda, a bright student from Malawi, pursued her BSc in Interior Design at Chandigarh University. Her journey is a testament to the power of education and the support of Mtendere Education Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards success and fulfillment. Her story serves as a reminder of the importance of education and the potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity, and has shown them that education is not just about achieving academic success, but also about transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Popup Overlay -->
          <!----
@@ -1102,6 +1174,13 @@
     <script src="assets/js/core/jarallaxInit.js"></script>
     <script src="assets/js/core/mobileMenu.js"></script>
     <script src="assets/js/core/owlCarousels.js"></script>
+    <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
+
+    <!-- SwiperJS Script -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- AOS Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 
