--- a/service.html
+++ b/service.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/chardigarh.css">
 
 </head>
 
