--- a/index.html
+++ b/index.html
@@ -5,18 +5,8 @@
     <meta charset="utf-8">
 
     <title>Mtendere Education Consult - Study Abroad Malawi</title>
-    <meta name="description"
-        content="Discover inspiring success stories of students from Malawi who achieved their international education dreams with Mtendere Education Consult. Start your journey today.">
-    <meta name="keywords"
-        content="Mtendere Education Consult, Malawi Students Abroad, Study Abroad Malawi, Success Stories, International Education, Scholarships Malawi, Study in India, Study in USA, Study in Canada, Education Consultancy Malawi">
-    <meta property="og:title" content="Success Stories - Mtendere Education Consult">
-    <meta property="og:description"
-        content="See how students from Malawi achieved their global dreams through Mtendere Education Consult.">
-    <meta property="og:image" content="path_to_cover_success_image.jpg">
-    <meta property="og:url" content="https://www.mtendereeducation.com/success-stories">
-    <meta name="twitter:card" content="summary_large_image">
-    <link rel="canonical" href="https://www.mtendereeducation.com/success-stories">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
