--- a/elements.html
+++ b/elements.html
@@ -128,7 +128,7 @@
 
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
-                        data-toggle="collapse" data-target="#main-navbar">
+                        data-toggle="collapse" data-target="#site-navigation">
                         <span></span>
                     </a>
 
