--- a/index.html
+++ b/index.html
@@ -455,9 +455,13 @@
     <section id="success-section" class="success py-5 bg-light">
         <div class="container py-5">
             <div class="section-header text-center mb-5">
-                <h4 class="text-primary fw-bold">Our Events</h4>
-                <h1 class="display-5">Empowering Futures, One Event at a Time</h1>
-                <p class="lead">Stay connected, stay inspired — participate, learn, grow.</p>
+                <h4 class="text-primary fw-bold">Our Success Story's</h4>
+                <h1 class="display-5"><span class="text-primary">Some of our satisfied students</span> have grown into successful
+                    professionals, and our success stories inspire others to follow their dreams.    
+                </h1>
+                <p class="lead">
+                    Transforming Lives Through Education
+                </p>
             </div>
             <div class="carousel" data-aos="fade-up" data-aos-delay="200">
                 <div class="swiper-wrapper">
