--- a/index.html
+++ b/index.html
@@ -393,47 +393,111 @@
                 </div>
             </div>
         </form>
-    </div>
-
-    <div class="services-section">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-lg-4 mb-5 mb-lg-0">
-
-                    <div class="section-title mb-3" data-aos="fade-up" data-aos-delay="0">
-                        <h2 class="line-bottom mb-4">Our Core Values</h2>
+        <div id="course-grid-results">
+            <!-- Course Grid Results will be populated dynamically -->
+            <div class="col-md-4 mb-4 course-item" data-aos="fade-up" data-aos-delay="0">
+                <div class="card h-100">
+                    <img src="assets/imgs/course1.jpg" class="card-img-top" alt="Course 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Bachelor of Science in Computer Science</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi et libero scelerisque, vel pulvinar neque semper.</p>
+                        <a href="#" class="btn btn-primary">Learn More</a>
                     </div>
-
-                    <p data-aos="fade-up" data-aos-delay="100">
-                        At Mtendere Education Consult, we are committed to guiding and empowering students in their
-                        academic journeys. <br> core values are the foundation of everything we do, ensuring that our
-                        services reflect integrity, innovation, and a deep passion for education.
-                    </p>
-
-                    <ul class="ul-check list-unstyled mb-5 primary" data-aos="fade-up" data-aos-delay="200">
-                        <li>🌍 Integrity in service.</li>
-                        <li>📚 Educational excellence</li>
-                        <li>🤝 Personalized support</li>
-                        <li>🚀 Empowering communities</li>
-                    </ul>
-
-                    <p data-aos="fade-up" id="openFormBtn" data-aos-delay="300"><a href="#" class="btn btn-primary">Get
-                            Started</a>
-                    </p>
                 </div>
-
-                <br>
-                <br>
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="0">
-                    <figure class="img-wrap-2">
-                        <img src="images/teacher-min.jpg" alt="Image" class="img-fluid">
-                        <div class="dotted"></div>
-                    </figure>
-
+            </div>
+            <!-- Add more course items here -->
+             <!-- Pagination -->
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Course Grid Section -->
+     <div id="course-grid" class="row">
+        <!-- Course Grid Items will be populated dynamically -->
+        <div class="col-md-4 mb-4 course-item" data-aos="fade-up" data-aos-delay="0">
+            <div class="card h-100">
+                <img src="assets/imgs/course1.jpg" class="card-img-top" alt="Course 1">
+                <div class="card-body">
+                    <h5 class="card-title">Bachelor of Science in Computer Science</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi et libero scelerisque, vel pulvinar neque semper.</p>
+                    <a href="#" class="btn btn-primary">Learn More</a>
+                    <div class="course-footer">
+                        <span class="badge bg-primary">Top University</span>
+                        <span class="badge bg-success">Recognized Course</span>
+                        <span class="badge bg-warning">International Program</span>
+                        <span class="badge bg-danger">Best Value Program</span>
+                        <span class="badge bg-info">Academic Success</span>
+                        <span class="badge bg-dark">International Cooperation</span>
+                        <span class="badge bg-light">Affordable & Flexible</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- UNIVERSITY STATS & ACCREDITATIONS -->
+    <section id="stats-accreditations" class="py-5 bg-white border-top">
+        <div class="container">
+            <!-- STATS -->
+            <div class="row text-center mb-5">
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <h2 class="fw-bold display-5 text-primary">60,000+</h2>
+                    <p class="text-muted">Students Worldwide</p>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <h2 class="fw-bold display-5 text-primary">12</h2>
+                    <p class="text-muted">Countries Represented</p>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <h2 class="fw-bold display-5 text-primary">100+</h2>
+                    <p class="text-muted">University & College Partners</p>
+                </div>
+            </div>
+
+            <!-- ACCREDITATIONS -->
+            <div class="text-center mb-4">
+                <h3 class="fw-semibold">Accreditations & Associations</h3>
+                <p class="text-muted">Trusted by renowned education bodies across the globe</p>
+            </div>
+
+            <div class="row justify-content-center align-items-center g-4">
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/gedu-logo.png" alt="Accreditation 3" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/cu-logo-white.webp" alt="Accreditation 1" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/ct-logo.png" alt="Accreditation 2" class="img-fluid grayscale-hover">
+            </div>
+            
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/logoblackn.webp" alt="Accreditation 4" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/gbs-dubai-1.webp" alt="Accreditation 5" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/msm-unify-logo.png" alt="Accreditation 6" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+                <img src="assets/imgs/au-logo.png" alt="Accreditation 7" class="img-fluid grayscale-hover">
+            </div>
+            
+        </div>
+    </section>
 
     <!-- Testimonial Video Carousel -->
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -1064,51 +1128,6 @@
             </div>
         </div>
     </div>
-
-    <!-- UNIVERSITY STATS & ACCREDITATIONS -->
-    <section id="stats-accreditations" class="py-5 bg-white border-top">
-        <div class="container">
-            <!-- STATS -->
-            <div class="row text-center mb-5">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">60,000+</h2>
-                    <p class="text-muted">Students Worldwide</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">12</h2>
-                    <p class="text-muted">Countries Represented</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">100+</h2>
-                    <p class="text-muted">University & College Partners</p>
-                </div>
-            </div>
-
-            <!-- ACCREDITATIONS -->
-            <div class="text-center mb-4">
-                <h3 class="fw-semibold">Accreditations & Associations</h3>
-                <p class="text-muted">Trusted by renowned education bodies across the globe</p>
-            </div>
-
-            <div class="row justify-content-center align-items-center g-4">
-                <div class="col-4 col-sm-2">
-                    <img src="assets/images/accreditation1.png" alt="Accreditation 1" class="img-fluid grayscale-hover">
-                </div>
-                <div class="col-4 col-sm-2">
-                    <img src="assets/images/accreditation2.png" alt="Accreditation 2" class="img-fluid grayscale-hover">
-                </div>
-                <div class="col-4 col-sm-2">
-                    <img src="assets/images/accreditation3.png" alt="Accreditation 3" class="img-fluid grayscale-hover">
-                </div>
-                <div class="col-4 col-sm-2">
-                    <img src="assets/images/accreditation4.png" alt="Accreditation 4" class="img-fluid grayscale-hover">
-                </div>
-                <div class="col-4 col-sm-2">
-                    <img src="assets/images/accreditation5.png" alt="Accreditation 5" class="img-fluid grayscale-hover">
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- APPLY CTA SECTION -->
     <section id="apply-cta" class="py-5 bg-primary text-white text-center">
