--- a/gallery.html
+++ b/gallery.html
@@ -427,7 +427,7 @@
                     </div>
 
                     <!-- Best Practices Tab -->
-                    <div id="GalleryTab-2" class="tab-pane fade show p-0">
+                    <div id="GalleryTab-2" class="tab-pane fade show p-0 active">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -464,7 +464,7 @@
                     </div>
 
                     <!-- Golden Careers Tab -->
-                    <div id="GalleryTab-3" class="tab-pane fade show p-0">
+                    <div id="GalleryTab-3" class="tab-pane fade show p-0 active">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -501,7 +501,7 @@
                     </div>
                     
                     <!-- Admission & Enrollment Tab -->
-                    <div id="GalleryTab-4" class="tab-pane fade show p-0">
+                    <div id="GalleryTab-4" class="tab-pane fade show p-0 active">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -538,7 +538,7 @@
                     </div>
 
                     <!-- Lifestyle Improvement Tab -->
-                    <div id="GalleryTab-5" class="tab-pane fade show p-0">
+                    <div id="GalleryTab-5" class="tab-pane fade show p-0 active">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -631,63 +631,6 @@
                     <a href="contact.html" class="btn btn-primary mt-4">Contact Us</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <h5 class="card-title
-                                text-blue-700">Email Us</h5>
-                            <p class="card-text">
-                                <a href="mailto:info@untreeco.com">mtendereeducationconsult@gmail.com</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue-700">Call Us</h5>
-                            <p class="card-text">
-                                <a href="tel:+265 88 123 4567">+265 88 123 4567</a><br>
-                                <a href="tel:+265 88 123 4568">+265 88 123 4568</a>
-                                </a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue-700">Visit Us</h5>
-                            <p class="card-text">
-                                Mtendere House, Off Mandala Road,<br>
-                                Area 3, Behind NBs<br>
-                                1st Floor Room 1,<br>
-                                Lilongwe, Malawi
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue-700">Follow Us</h5>
-                            <div class="social-icons">
-                                <a href="#"><span class="icon-facebook"></span></a>
-                                <a href="#"><span class="icon-twitter"></span></a>
-                                <a href="#"><span class="icon-instagram"></span></a>
-                                <a href="#"><span class="icon-linkedin"></span></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!--- Embeded Maps--->
             <div class="col-lg-12 text-center mx-auto"> 
                 <div id="google-map" style="height: 400px;">
@@ -695,20 +638,6 @@
                         async defer></script>
                     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 </div>
-                <script>
-                    function initMap() {
-                        var location = { lat: -13.9626, lng: 33.7872 };
-                        var map = new google.maps.Map(document.getElementById('google-map'), {
-                            zoom: 15,
-                            center: location
-                        });
-                        var marker = new google.maps.Marker({
-                            position: location,
-                            map: map
-                        });
-                    }
-                </script>
-
             </div>
             <!-- Contact Section End -->
         </div>
