--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 mr-auto mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="0">
-                    <img src="assets/imgs/Madam Brenda with Students.jpg" alt="image" class="img-fluid">
+                    <img src="assets/imgs/Malawian Students on Campus at Chandigarh University.JPG" alt="image" class="img-fluid">
                 </div>
                 <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                     <h3 class="line-bottom mb-4">Why Choose Us</h3>
@@ -592,19 +592,12 @@
                                         </div>
                                         <div>
                                             <p>Profession tutors are not only skilled in their subjects but also
-                                                understand the unique
-                                                challenges
-                                                faced by international students. They provide personalized support,
-                                                ensuring that
-                                                each student receives the attention and guidance they need to succeed.
+                                                understand the unique challenges faced by international students.
                                             </p>
                                             </p>
                                             <p>
                                                 Our tutors are not just educators; they are mentors who inspire and
-                                                motivate students to
-                                                reach their full potential. They create a supportive learning
-                                                environment that fosters
-                                                curiosity, critical thinking, and a love for learning.</p>
+                                                motivate students to reach their full potential.</p>
                                             </p>
                                         </div>
                                     </div>
@@ -623,21 +616,14 @@
                                 <div class="accordion-body">
                                     <div class="d-flex">
                                         <div class="accordion-img mr-4">
-                                            <img src="images/img-school-2-min.jpg" alt="Image" class="img-fluid">
+                                            <img src="assets/imgs/Our partners.jpg" alt="Image" class="img-fluid">
                                         </div>
                                         <p class="mb-4 pb-2">Good characters are essential for success in any field.
-                                            They
-                                            help students build strong relationships, communicate effectively, and
-                                            navigate
-                                            challenges with resilience and integrity. At Mtendere Education Consult, we
-                                            prioritize character development alongside academic achievement.</p>
+                                            They help students build strong relationships, communicate effectively, and
+                                            navigate challenges with resilience and integrity.
+                                        </p>
                                         <p>We believe that education is not just about acquiring knowledge; it's also
-                                            about
-                                            developing the skills and values that will help students succeed in life.
-                                            Our
-                                            tutors are committed to fostering good character traits such as honesty,
-                                            respect,
-                                            responsibility, and empathy in their students.
+                                            about developing the skills and values that will help students succeed in life.
                                         </p>
                                         <div class="d-flex mb-3">
                                             <div class="btn-icon bg-primary mr-4">
@@ -645,9 +631,12 @@
                                             </div>
                                             <div class="mt-n1">
                                                 <h4>Skilled Instructors</h4>
-                                                <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero
-                                                    clita magna kasd no
-                                                    nonumy et eos dolor magna ipsum.</p>
+                                                <p>
+                                                    Our instructors are highly qualified and experienced in their fields.
+                                                    They are dedicated to providing the best possible education to our
+                                                    students, ensuring that they are well-prepared for their future
+                                                    endeavors.
+                                                </p>
                                             </div>
                                         </div>
                                         <div class="d-flex mb-3">
@@ -683,7 +672,7 @@
                                         <div>
                                             <div class="col-lg-5" style="min-height: 500px;">
                                                 <div class="position-relative h-100">
-                                                    <img class="position-absolute w-100 h-100" src="img/feature.jpg"
+                                                    <img class="position-absolute w-100 h-100" src="assets/imgs/IMG-20240219-WA0074.jpg"
                                                         style="object-fit: cover;">
                                                 </div>
                                             </div>
@@ -705,29 +694,16 @@
                                 <div class="accordion-body">
                                     <div class="d-flex">
                                         <div class="accordion-img mr-4">
-                                            <img src="images/img-school-3-min.jpg" alt="Image" class="img-fluid">
+                                            <img src="assets/imgs/IMG-20240219-WA0074.jpg" alt="Image" class="img-fluid">
                                         </div>
                                         <div>
                                             <p>
                                                 International students often face unique challenges when studying
-                                                abroad, including
-                                                cultural differences, language barriers, and homesickness. At Mtendere
-                                                Education
-                                                Consult, we prioritize the safety and well-being of our students.</p>
+                                                abroad, including cultural differences, language barriers, and homesickness.</p>
                                             <p>We provide comprehensive support to help students navigate these
-                                                challenges and
-                                                ensure a smooth transition to their new environment. Our team is
-                                                dedicated to
-                                                providing personalized assistance, including pre-departure orientation,
-                                                on-campus
-                                                support, and ongoing guidance throughout their studies.</p>
+                                                challenges and ensure a smooth transition to their new environment.</p>
                                             <p>We also work closely with universities and colleges to ensure that our
-                                                students
-                                                have access to the resources and support they need to succeed. This
-                                                includes
-                                                academic advising, counseling services, and extracurricular activities
-                                                that promote
-                                                cultural exchange and integration.</p>
+                                                students have access to the resources and support they need to succeed.</p>
                                         </div>
                                     </div>
 
@@ -755,19 +731,18 @@
                         <h1 class="display-4">Why Study Abroad with Us?</h1>
                     </div>
                     <p class="mb-4 pb-2">
-                        <br>We are a registered organization under the Malawi Government Business Registration Act (No
-                        12 of
-                        2012), with a strong passion for education and a mission to connect aspiring students with
-                        prestigious
-                        international universities and colleges.
+                        We believe that education is not just about acquiring knowledge; it's also about developing the skills
+                        and values that will help students succeed in life. Our mission is to provide students with the
+                        best possible education and support to help them achieve their dreams.
                     </p>
-                    <p class="mb-4 pb-2">We are dedicated to offering comprehensive support for students pursuing higher
-                        education — from application assistance to personalized guidance. Our team of experienced
-                        professionals is committed to providing the highest level of service, ensuring that each student
-                        receives the support they need to succeed.</p>
+                    <p class="mb-4 pb-2">
+                        Our programs offer a wide range of programs to suit the diverse needs and interests of our
+                        students. Whether you're looking for undergraduate, postgraduate, or vocational courses, we have
+                        something for everyone.
+                    </p>
                     <div class="col-lg-5" style="min-height: 500px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="assets/imgs/about us 2.jpg" style="object-fit: cover;">
                         </div>
                     </div>
                 </div>
