--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
 
     <title>Mtendere Education Consult - Study Abroad Malawi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
+    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+    <meta name="author" content="Mtendere Education Consult">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- Bootstrap 5 & Custom Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
