--- a/team.html
+++ b/team.html
@@ -364,7 +364,7 @@
                                     about.&rdquo;
                                 </p>
                                 <div class="author mt-4">
-                                    <img src="images/" alt="Student 1" class="rounded-full w-16 h-16">
+                                    <img src="assets/imgs/students/Mirabel lopote 2.jpg" alt="Student 1" class="rounded-full w-16 h-16">
                                     <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
                                     <p class="position text-gray-500">Engineering Student, University of Toronto</p>
                                 </div>
@@ -379,7 +379,7 @@
                                     confident about my academic future, and I couldn't be more grateful.&rdquo;
                                 </p>
                                 <div class="author mt-4">
-                                    <img src="images/person_2.jpg" alt="Student 2" class="rounded-full w-16 h-16">
+                                    <img src="assets/imgs/Students.jpg" alt="Student 2" class="rounded-full w-16 h-16">
                                     <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
                                     <p class="position text-gray-500">Law Student, University of Manchester</p>
                                 </div>
@@ -395,7 +395,7 @@
                                     services!&rdquo;
                                 </p>
                                 <div class="author mt-4">
-                                    <img src="images/person_3.jpg" alt="Student 3" class="rounded-full w-16 h-16">
+                                    <img src="assets/imgs/students 2.jpg" alt="Student 3" class="rounded-full w-16 h-16">
                                     <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
                                     <p class="position text-gray-500">Product Designer, University of California</p>
                                 </div>
@@ -411,7 +411,7 @@
                                     dream in the US!&rdquo;
                                 </p>
                                 <div class="author mt-4">
-                                    <img src="images/person_4.jpg" alt="Student 4" class="rounded-full w-16 h-16">
+                                    <img src="assets/imgs/Carloline.jpg" alt="Student 4" class="rounded-full w-16 h-16">
                                     <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
                                     <p class="position text-gray-500">Computer Science Student, Stanford University</p>
                                 </div>
