--- a/testimonial.html
+++ b/testimonial.html
@@ -236,50 +236,6 @@
     </div>
     <!-- Testimonial Start -->
 
-    <!-- Blog Section Start -->
-    <div class="untree_co-section bg-light py-12">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <h3 class="line-bottom mb-4 text-blue-700">Latest News & Articles</h3>
-                    <p class="lead">Stay updated with the latest news and articles from Mtendere Education Consult.</p>
-                    <a href="blog.html" class="btn btn-primary mt-4">View All News</a>
-                    <div class="owl-carousel wide-slider-blog">
-                        <!-- Blog Post 1 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/2020mBatch Departure day.jpg" alt="Blog Post 1" class="img-fluid">
-                                <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a>
-                                </h4>
-                                <p>Learn the best strategies to secure scholarships for your international studies.</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 2 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
-                                    class="img-fluid">
-                                <h4 class="mt-3"><a href="#">Top Universities for International Students</a></h4>
-                                <p>Discover the top universities that welcome international students with open arms.</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 3 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid">
-                                <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
-                                <p>Get tips and tricks for making your university application stand out.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Blog Section End -->
-
     <!-- Contact Section Start -->
     <div class="untree_co-section bg-light py-12">
         <div class="container">
@@ -448,6 +404,57 @@
         </div>
     </div>
     <!-- Contact Section End -->
+<!-- UNIVERSITY STATS & ACCREDITATIONS -->
+    <section id="stats-accreditations" class="py-5 bg-white border-top">
+        <div class="container">
+        <!-- STATS -->
+        <div class="row text-center mb-5">
+            <div class="col-md-6 col-lg-4 mb-4">
+            <h2 class="fw-bold display-5 text-primary">60,000+</h2>
+            <p class="text-muted">Students Worldwide</p>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+            <h2 class="fw-bold display-5 text-primary">12</h2>
+            <p class="text-muted">Countries Represented</p>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+            <h2 class="fw-bold display-5 text-primary">100+</h2>
+            <p class="text-muted">University & College Partners</p>
+            </div>
+        </div>
+
+        <!-- ACCREDITATIONS -->
+        <div class="text-center mb-4">
+            <h3 class="fw-semibold">Accreditations & Associations</h3>
+            <p class="text-muted">Trusted by renowned education bodies across the globe</p>
+        </div>
+
+        <div class="row justify-content-center align-items-center g-4">
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/gedu-logo.png" alt="Accreditation 3" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/cu-logo-white.webp" alt="Accreditation 1" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/ct-logo.png" alt="Accreditation 2" class="img-fluid grayscale-hover">
+            </div>
+
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/logoblackn.webp" alt="Accreditation 4" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/gbs-dubai-1.webp" alt="Accreditation 5" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/msm-unify-logo.png" alt="Accreditation 6" class="img-fluid grayscale-hover">
+            </div>
+            <div class="col-4 col-sm-2">
+            <img src="assets/imgs/au-logo.png" alt="Accreditation 7" class="img-fluid grayscale-hover">
+            </div>
+
+        </div>
+    </section>
 
     <!-- APPLY CTA SECTION -->
     <section id="apply-cta" class="py-5 bg-primary text-white text-center">
