--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/scss/style.scss">
+    <link rel="stylesheet" href="assets/scss/_site-blocks.scss">
+    <link rel="stylesheet" href="assets/scss/_variables.scss">
+
 </head>
 
 <body>
@@ -1669,109 +1673,100 @@
         </div>
         <div class="row">
             <div class="col-md-4 mb-5">
-            <h3 class="text-white mb-4">Get In Touch</h3>
-            <p><i class="fa fa-map-marker-alt mr-2"></i>
-                Babaje House, Off Mandala Road,<br>
-                Area 3, Behind NBs<br>
-                1st Floor Room 1,<br>
-                Lilongwe<br>
-            </p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
-            <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
-            <div class="d-flex justify-content-start mt-4">
-                <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
-                <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
-                <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
-                <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                <h3 class="text-white mb-4">Get In Touch</h3>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>
+                    Babaje House, Off Mandala Road,<br>
+                    Area 3, Behind NBs<br>
+                    1st Floor Room 1,<br>
+                    Lilongwe<br>
+                </p>
+                <p><i class="fa fa-phone-alt mr-2"></i>   + 265 999 360 325 / 265 887 209 531</p>
+                <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                <div class="d-flex justify-content-start mt-4">
+                    <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                    <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                    <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                    <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                </div>
             </div>
-            </div>
-            <div class="col-lg-3">
-            <div class="widget">
-                <h3>Gallery</h3>
-                <ul class="instafeed instagram-gallery list-unstyled">
-                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
-                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
-                </li>
-                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
-                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
-                </li>
-                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
-                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
-                </li>
-                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
-                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
-                </li>
-                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
-                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
-                </li>
-                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
-                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
-                </li>
-                </ul>
-            </div> <!-- /.widget -->
+            <div class="col-lg-3 mb-4">
+                <div class="widget">
+                    <h5 class="fw-bold">Gallery</h5>
+                    <ul class="instafeed instagram-gallery list-unstyled">
+                        <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                                src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                        </li>
+                        <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                                src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                        </li>
+                        <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                                src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                        </li>
+                        <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                                src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                        </li>
+                        <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                                src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                        </li>
+                        <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                                src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                        </li>
+                    </ul>
+                </div> <!-- /.widget -->
             </div> <!-- /.col-lg-3 -->
 
             <div class="col-md-3 mb-4">
-            <h5 class="fw-bold">Services</h5>
-            <ul class="list-unstyled">
-                <li><a href="study-abroad-programmes.html" class="text-white">Programmes</a></li>
-                <li><a href="study-abroad-application.html" class="text-white">Application Process</a></li>
-                <li><a href="study-abroad-scholarships.html" class="text-white">Scholarships</a></li>
-                <li><a href="study-abroad-visa.html" class="text-white">Visa Information</a></li>
-                <li><a href="study-abroad-testimonials.html" class="text-white">Testimonials</a></li>
-                <li><a href="study-abroad-blog.html" class="text-white">Blog</a></li>
-                <li><a href="study-abroad-contact.html" class="text-white">Contact Us</a></li>
-            </ul>
+                <h5 class="fw-bold">Services</h5>
+                <ul class="list-unstyled">
+                    <li><a href="study-abroad-programmes.html" class="text-white">Programmes</a></li>
+                    <li><a href="study-abroad-application.html" class="text-white">Application Process</a></li>
+                    <li><a href="study-abroad-scholarships.html" class="text-white">Scholarships</a></li>
+                    <li><a href="study-abroad-visa.html" class="text-white">Visa Information</a></li>
+                    <li><a href="study-abroad-testimonials.html" class="text-white">Testimonials</a></li>
+                    <li><a href="study-abroad-blog.html" class="text-white">Blog</a></li>
+                    <li><a href="study-abroad-contact.html" class="text-white">Contact Us</a></li>
+                </ul>
             </div>
 
             <!-- Footer Column 3: News and Blog -->
             <div class="col-md-3 mb-4">
-            <h5 class="fw-bold">News & Updates</h5>
-            <ul class="list-unstyled">
-                <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
-                <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
-                </li>
-                <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
-            </ul>
+                <h5 class="fw-bold">News & Updates</h5>
+                <ul class="list-unstyled">
+                    <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
+                    <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
+                    </li>
+                    <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
+                </ul>
             </div>
 
             <div class="col-md-4 mb-5">
-            <h3 class="text-white mb-4">Quick Links</h3>
-            <div class="d-flex flex-column justify-content-start">
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
-                Condition</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
-                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
-            </div>
+                <h3 class="text-white mb-4">Quick Links</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                    Condition</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                </div>
             </div>
         </div>
         </div>
     </div>
     <div class="copyrights">
         <div class="container">
-        <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
         </div>
     </div>
-
-    <!-- Google reCAPTCHA -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
+    <!-- Footer End -->
+    
     <!-- Floating WhatsApp Chat Button -->
-    <a href="https://wa.me/999431115" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/999360325" class="whatsapp-float" target="_blank">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
     </a>
 
     <!-- Back to Top Button -->
     <button id="backToTop" title="Back to top">↑</button>
-
-    <!-- Chatbot Integration (Placeholder) -->
-    <div id="backToTop" class="chatbot-icon">
-        <button class="btn btn-info" id="chatbot-btn">
-            <i class="fas fa-comments"></i> Chat with us!
-        </button>
-    </div>
 
     <!-- Footer End -->
 
