--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                         style="max-height: 50px;">
                 </a>
 
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
                 <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
@@ -85,14 +89,15 @@
                     <li><a href="blog.html" class="nav-link">Blog</a></li>
                     <li><a href="gallery.html" class="nav-link">Gallery</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li><a href="event.html" class="nav-link">events</a></li>
+                    <li><a href="event.html" class="nav-link">Events</a></li>
                 </ul>
 
+                <!----
                 <div class="d-lg-none d-flex">
                     <a href="#" class="burger site-menu-toggle js-menu-toggle text-dark">
                         <span></span>
                     </a>
-                </div>
+                </div>---->
                 <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
                     data-toggle="modal">Enroll Now</a>
             </div>
