--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     <div id="loadingSpinner">
         <div class="spinner"></div>
     </div>
+
+    <!-- Mobile Menu -->
+    <div class="site-mobile-menu">
+        <div class="site-mobile-menu-header">
+            <div class="site-mobile-menu-close">
+                <span class="icofont-close js-menu-toggle"></span>
+            </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+    </div>
+
     <!-- Top Bar -->
     <div class="top-bar py-2 bg-light">
         <div class="container">
@@ -80,26 +91,26 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
+                <ul class="site-menu js-clone-nav d-none d-lg-flex list-unstyled m-0">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="course.html" class="nav-link">Scholarships</a></li>
-                    <li><a href="service.html" class="nav-link">Services</a></li>
-                    <li><a href="team.html" class="nav-link">Team</a></li>
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-                    <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li><a href="event.html" class="nav-link">Events</a></li>
+                    <li><a href="about.html" class="nav-link active">About</a></li>
+                    <li><a href="course.html" class="nav-link active">Scholarships</a></li>
+                    <li><a href="service.html" class="nav-link active">Services</a></li>
+                    <li><a href="team.html" class="nav-link active">Team</a></li>
+                    <li><a href="blog.html" class="nav-link active">Blog</a></li>
+                    <li><a href="gallery.html" class="nav-link active">Gallery</a></li>
+                    <li><a href="contact.html" class="nav-link active">Contact</a></li>
+                    <li><a href="event.html" class="nav-link active">Events</a></li>
                 </ul>
 
-                <!----
-                <div class="d-lg-none d-flex">
-                    <a href="#" class="burger site-menu-toggle js-menu-toggle text-dark">
+                <a href="#"
+                        class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
+                        data-toggle="collapse" data-target="#main-navbar">
                         <span></span>
-                    </a>
-                </div>---->
+                </a>
                 <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                    data-toggle="modal">Enroll Now</a>
+                    data-toggle="modal">Enroll now
+                </a>
             </div>
         </div>
     </nav>
