--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <!-- Top Bar -->
     <div class="top-bar py-2 bg-light">
         <div class="container">
-            <div class="row align-items-center justify-content-between">
+            <div class="row justify-content-between">
 
-                <div class="col-md-8 d-flex align-items-center">
-                    <a href="#faqModal" class="small text-dark mr-4" data-toggle="modal">
+                <div class="col-md-8 d-flex">
+                    <a href="#faqModal" class="small mr-4" data-toggle="modal">
                         <i class="fa fa-question-circle mr-1"></i> Have a Question?
                     </a>
                     <a href="tel:" class="small text-dark mr-4">
@@ -80,14 +80,14 @@
     <!-- Navigation -->
     <nav class="site-nav sticky-top shadow-sm bg-white">
         <div class="container">
-            <div class="d-flex align-items-center justify-content-between py-3">
+            <div class="d-flex justify-content-between py-3">
 
                 <a href="index.html" class="logo">
                     <img src="img/Mtendere_logo.png" alt="Mtendere Education Consult" class="img-fluid"
-                        style="max-height: 50px;">
+                        style="width: 150px; height: auto;">
                 </a>
 
-                <ul class="site-menu js-clone-nav d-none d-lg-flex list-unstyled m-0">
+                <ul class="site-menu js-clone-nav list-unstyled m-0">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
                     <li><a href="about.html" class="nav-link active">About</a></li>
                     <li><a href="course.html" class="nav-link active">Scholarships</a></li>
